<resources>
    <string name="app_name">Photo Gallery</string>
    <string name="add_multimedia">Add Multimedia</string>
    <string name="add_multimedia_description">Add multimedia on your profile</string>
    <string name="likes">Likes</string>
    <string name="likes_description">Show likes and user activities</string>
    <string name="messages">Messages</string>
    <string name="messages_description">Show messages received and sent to your friends</string>
    <string name="profile_textview_bio">BIO</string>
    <string name="profile_tab_photos">PHOTOS</string>
    <string name="profile_tab_followers">FOLLOWERS</string>
    <string name="profile_tab_following">FOLLOWING</string>
    <string name="profile_tab_more_info">MORE INFO</string>
    <string name="menu_bottom_home">Home</string>
    <string name="menu_bottom_home_description">Go to home page</string>
    <string name="menu_bottom_search">Search</string>
    <string name="menu_bottom_search_description">Search content</string>
    <string name="menu_bottom_profile">Profile</string>
    <string name="menu_bottom_profile_description">Show profile</string>
    <string name="menu_bottom_add_content_description">Add post</string>
    <string name="menu_bottom_hamburger">More options</string>
    <string name="menu_bottom_hamburger_description">Show more options</string>
    <string name="search_hint">Search</string>

    <string name="camera_permission_granted">Camera Permission Granted</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="camera_access_required">Access camera permission to make beautiful media for your relatives!</string>
    <string name="camera_no_permmission"></string>

</resources>